--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "author": "Awrmin Khodaei",
+  "author": "Jananis",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
